[package]
name = "miditokeydaemon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
midir = "0.9.1"
enigo = "0.1.3"
log = "0.4.20"
config = "0.14.0"
shellexpand = "3.1.0"
serde = "1.0.196"
serde_json = "1.0.113"
env_logger = "0.11.1"
anyhow = "1.0.79"
debounce = "0.2.2"
